fixed js and css link url

--- a/html/counters.html
+++ b/html/counters.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vehicle Counters</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <h1>Vehicle Counters</h1>
@@ -22,6 +22,6 @@
         <button @click="saveData">Save Data</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
