--- a/html/totals.html
+++ b/html/totals.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Total Counts</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <h1>Consolidated Vehicle Counts</h1>
@@ -15,6 +15,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
