added Firebase DB support

--- a/html/totals.html
+++ b/html/totals.html
@@ -15,6 +15,7 @@
         </div>
     </div>
 
-    <script src="../js/main.js"></script>
+    <script type="module" src="../js/components/firebase.js"></script>
+    <script type="module" src="../js/main.js"></script>
 </body>
 </html>
