--- a/html/counters.html
+++ b/html/counters.html
@@ -22,6 +22,7 @@
         <button @click="saveData">Save Data</button>
     </div>
 
-    <script src="../js/main.js"></script>
+    <script type="module" src="../js/components/firebase.js"></script>
+    <script type="module" src="../js/main.js"></script>
 </body>
 </html>
