Fixed js file directory / link

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vehicle Counter</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script type="module" src="../js/components/firebase.js"></script>
-    <script type="module" src="../js/main.js"></script>
+    <script type="module" src="./js/components/firebase.js"></script>
+    <script type="module" src="./js/main.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -28,6 +28,7 @@
         </div>
 
         <div v-else class="container-monitor">
+
         </div>
     </div>
 </body>
