Test if na gana sa loginmodule

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <script type="module">
+        import { createApp } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
+        import Login from "./js/components/login.js";
+        import Main from "./js/main.js";
+
+        const app = createApp(Login);
+        app.mount("#app");
+    </script>
+
     <div id="app">
+        <router-view></router-view>
         <div v-if="main.data.tabletID>0 && main.data.tabletID<10 && main.data.sessionID>0 && main.data.sessionID<10" class="container flexV container-tablet">
             <h1>Camaligan Vehicle Counter Team {{main.data.tabletID}} - Session {{main.data.sessionID}}</h1>
             
